<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/health_care_engineering_services"
        android:textColor="#6EB23B"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/home"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/health_care"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/who_we_are"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/oxygen_plant"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/medical_stuff"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/product_services"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/clients"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/careers"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

            <Button
                android:id="@+id/button10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:fontFamily="serif"
                android:textSize="20sp"
                app:backgroundTint="#6EB23B" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>